[BUGFIX] Fix z-index of clickmenu in DocHeader
Resolves: #70997
Releases: master
Reviewed-on: https://review.typo3.org/44263
Tested-by: Daniel Goerz <ervaude@gmail.com>
Tested-by: Stefan Neufeind <typo3.neufeind@speedpartner.de>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -9472,11 +9472,11 @@ body#typo3-alt-clickmenu-php {
 }
 div#contentMenu0 {
   position: absolute;
-  z-index: 10;
+  z-index: 300;
 }
 div#contentMenu1 {
   position: absolute;
-  z-index: 20;
+  z-index: 310;
 }
 #typo3-docheader {
   background: #eeeeee;
